# chonky

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
chonky/segmenters/: base.py  lexical.py  models.py
tests/unit/: test_segmenter_character_level.py
